[gd_scene load_steps=25 format=2]

[ext_resource path="res://codigos/ControladorDelJuego.gd" type="Script" id=1]
[ext_resource path="res://Escenas/flappybird.tscn" type="PackedScene" id=2]
[ext_resource path="res://codigos/CameraTerceraPersona.gd" type="Script" id=3]
[ext_resource path="res://codigos/CameraLateral.gd" type="Script" id=4]
[ext_resource path="res://codigos/SerieColumnas.gd" type="Script" id=5]
[ext_resource path="res://Escenas/Columnasotras.tscn" type="PackedScene" id=6]
[ext_resource path="res://Escenas/plataforma_chica.tscn" type="PackedScene" id=7]
[ext_resource path="res://codigos/suelo.gd" type="Script" id=8]
[ext_resource path="res://typografias/LuckiestGuy.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://hdri/cielo.jpg" type="Texture" id=10]
[ext_resource path="res://musica/coint1.wav" type="AudioStream" id=11]
[ext_resource path="res://musica/POL-magical-sun-short.ogg" type="AudioStream" id=12]
[ext_resource path="res://musica/sfx_wing.wav" type="AudioStream" id=13]
[ext_resource path="res://musica/sfx_hit.wav" type="AudioStream" id=14]
[ext_resource path="res://musica/pajaros_efecto_de_sonido.ogg" type="AudioStream" id=15]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 5, 30.43, 5 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 5, 30.43, 5 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 100
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=5]
size = 30
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=6]
resource_name = "ColorGameOverYpuntuacion"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverFInal:custom_colors/font_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0.407843, 0.407843, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverFInal/TextoClickreiniciar:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.580392, 0.576471, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0.580392, 0.576471, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "posicion_textos"
length = 5.0

[sub_resource type="PanoramaSky" id=8]
panorama = ExtResource( 10 )

[sub_resource type="Environment" id=9]
background_mode = 2
background_sky = SubResource( 8 )

[node name="Escena_principal" type="Spatial"]

[node name="nivel1" type="Spatial" parent="."]
script = ExtResource( 1 )
Y_maximo = 250.0

[node name="flappyBird" parent="nivel1" instance=ExtResource( 2 )]
transform = Transform( 2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 300, 95.7323, 1.94009 )

[node name="CameraTerceraPersona" type="Camera" parent="nivel1"]
transform = Transform( 0.380973, 0.235089, -0.894199, 0, 0.967135, 0.254264, 0.924586, -0.0968678, 0.368452, 300, 108.099, 20.1366 )
far = 5000.0
script = ExtResource( 3 )

[node name="CameraLateral" type="Camera" parent="nivel1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 300, 43.13, 152.267 )
current = true
far = 5000.0
script = ExtResource( 4 )

[node name="columnas" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 600, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 1 )

[node name="columnas2" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 800, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas2" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas2" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas2/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas3" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1000, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas3" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas3" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas3" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas3/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas4" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1200, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas4" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas4" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas4" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas4/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas5" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1400, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas5" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas5" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas5" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas5/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas6" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1600, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas6" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas6" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas6" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas6/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas7" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1800, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas7" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas7" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas7" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas7/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas8" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2000, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas8" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas8" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas8" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas8/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas9" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2200, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas9" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas9" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas9" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas9/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="columnas10" type="Spatial" parent="nivel1"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2400, 200, 5.621 )
script = ExtResource( 5 )

[node name="Columnas" parent="nivel1/columnas10" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -300, -3.384 )

[node name="Columnas2" parent="nivel1/columnas10" instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -1, 8.74228e-008, 0, -8.74228e-008, -1, 0, 115.7, -3.384 )

[node name="Area" type="Area" parent="nivel1/columnas10" groups=[
"puntaje",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -90, -6 )

[node name="CollisionShape" type="CollisionShape" parent="nivel1/columnas10/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3 )
shape = SubResource( 2 )

[node name="plataforma_chica" parent="nivel1" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 0, -38.2433, 0 )
script = ExtResource( 8 )

[node name="plataforma_chica2" parent="nivel1" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 1000, -38.243, 0 )
script = ExtResource( 8 )

[node name="plataforma_chica3" parent="nivel1" instance=ExtResource( 7 )]
transform = Transform( -4.37114e-008, 0, -1, 0, 1, 0, 1, 0, -4.37114e-008, 2000, -38.243, 0 )
script = ExtResource( 8 )

[node name="puntos" type="Label" parent="nivel1"]
anchor_bottom = 0.74
margin_left = 15.0
margin_top = 15.0
margin_right = 201.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Puntos: 0"

[node name="GameOverFInal" type="Label" parent="nivel1" groups=[
"gameovertext",
]]
editor/display_folded = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -259.0
margin_top = -233.49
margin_right = 259.0
margin_bottom = 117.01
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 0.787043, 0.787043, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "GameOver"
align = 1

[node name="TextoClickreiniciar" type="Label" parent="nivel1/GameOverFInal"]
margin_left = 107.532
margin_top = 86.5943
margin_right = 593.532
margin_bottom = 137.594
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.731295, 0.728784, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Click para reiniciar"

[node name="puntos2" type="Label" parent="nivel1/GameOverFInal"]
margin_left = 155.443
margin_top = 124.304
margin_right = 389.444
margin_bottom = 175.304
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Puntos: 0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="nivel1"]
anims/ColorGameOverYpuntuacion = SubResource( 6 )
anims/posicion_textos = SubResource( 7 )

[node name="Iluminacion" type="Spatial" parent="."]
editor/display_folded = true

[node name="DirectionalLight" type="DirectionalLight" parent="Iluminacion"]
transform = Transform( 0.254001, 0.967204, -3.02793e-008, -0.639744, 0.168006, 0.750001, 0.725404, -0.190501, 0.661436, 0, 188.944, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="Iluminacion"]
environment = SubResource( 9 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="Iluminacion"]
transform = Transform( -0.00305714, 0, -0.999995, 0, 1, 0, 0.999995, 0, -0.00305714, 1219.91, 98.1173, 3.72946 )
extents = Vector3( 64.2617, 123.008, 1242.85 )

[node name="VFX_Musica" type="Node" parent="."]
editor/display_folded = true

[node name="puntos" type="AudioStreamPlayer" parent="VFX_Musica" groups=[
"puntos",
]]
stream = ExtResource( 11 )
bus = "puntos"

[node name="musica" type="AudioStreamPlayer" parent="VFX_Musica" groups=[
"musica",
]]
stream = ExtResource( 12 )
autoplay = true
bus = "musica"

[node name="volar" type="AudioStreamPlayer" parent="VFX_Musica" groups=[
"volar",
]]
stream = ExtResource( 13 )

[node name="hit" type="AudioStreamPlayer" parent="VFX_Musica" groups=[
"hit",
]]
stream = ExtResource( 14 )

[node name="Sonido_pajaro" type="AudioStreamPlayer" parent="VFX_Musica" groups=[
"Sonido_pajaro",
]]
stream = ExtResource( 15 )

[connection signal="body_exited" from="nivel1/columnas/Area" to="nivel1/columnas" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas2/Area" to="nivel1/columnas2" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas3/Area" to="nivel1/columnas3" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas4/Area" to="nivel1/columnas4" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas5/Area" to="nivel1/columnas5" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas6/Area" to="nivel1/columnas6" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas7/Area" to="nivel1/columnas7" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas8/Area" to="nivel1/columnas8" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas9/Area" to="nivel1/columnas9" method="_on_Area_body_exited"]
[connection signal="body_exited" from="nivel1/columnas10/Area" to="nivel1/columnas10" method="_on_Area_body_exited"]
